--- a/index.html
+++ b/index.html
@@ -72,19 +72,13 @@
                         <a class="page-scroll" style="font-size: xx-small">cart</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#noa">Get Your NOA</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#products">Products</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Testimonials</a>
+                        <a class="page-scroll" href="#testimonials">Testimonials</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#team">Team</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -108,11 +102,11 @@
     </header>
 
     <!-- Services Section -->
-    <section id="services">
+    <section id="services" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Receive your Notice of Assessmet documents in 24 hours or less</h2>
+                    <h2 class="section-heading">Receive your Notice of Assessment documents in 24 hours or less</h2>
                     <h3 class="section-subheading text-muted"><strong>Are you a Mortgage Broker?</strong> We offer next day delivery of NOA packages that help you close deals faster.</h3>
                 </div>
             </div>
@@ -149,7 +143,7 @@
     </section>
 
     <!-- Products Grid Section -->
-<section id="products" class="bg-light-gray">
+<section id="noa">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -157,24 +151,24 @@
                 <h3 class="section-subheading text-muted">Straight to your inbox within hours!</h3>
             </div>
         </div>
+        <div class="container">
         <div class="row">
-            <div class="col-md-12 portfolio-item text-center">
+            <div class="col-md-12 portfolio-item" style="text-align: center">
                 <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                    <div class="portfolio-hover">
-                        <img src="img/products/Sample-Assessment-791x1024.jpg" align="center" height="647" width="500" class="img-responsive" alt="">
-                        <!-- stupid plus symbol
+                    <!-- <div class="portfolio-hover"> -->
+                        <img src="img/products/Sample-Assessment-791x1024.jpg" height="647" width="500" class="img-responsive" alt="">
+                        <!-- stupid plus symbol -->
                         <div class="portfolio-hover-content">
                             <i class="fa fa-plus fa-3x"></i>
                         </div>
-                        -->
-                    </div>
+                    <!-- </div> -->
                 </a>
                 <div class="portfolio-caption">
                     <h4>Notice of Assessment</h4>
                     <p class="text-muted">Comes with Bonus Statement of Account!</p>
                 </div>
             </div>
-
+        </div>
             <!-- future testimonials
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
@@ -224,7 +218,7 @@
 </section>
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio" class="bg-light-gray">
+    <section id="testimonials" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
