new testimonial and fixes
added new testimonial and fixed a broken div

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     </div>
 </section>
 
-    <!-- Portfolio Grid Section -->
+    <!-- Testimonials Grid Section -->
     <section id="testimonials" class="bg-light-gray">
         <div class="container">
             <div class="row">
@@ -587,7 +587,7 @@
                             -->
                             <p>"We, very unexpectedly, stumbled across the home of our dreams about six months before we ever anticipated buying a home. With very little time to get approved for a mortgage, we were also unable to locate our notice of assessments. Waiting for Revenue Canada to mail them would have taken several weeks, and we would have lost the opportunity to purchase our home. Thankfully we were introduced to this service whereby signing a single consent form we had 3 years of notice of assessments within hours. We were able to remove all subjects in time and now own the home of our dreams."</p>
                             <ul class="list-inline">
-                                <li>Date: July 2014</li>
+                                <li>Date: October 2015</li>
                                 <li>Client: Latieshia Falez</li>
                             </ul>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Testimonial</button>
@@ -611,12 +611,17 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Heading</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/startup-framework-preview.png" alt="">
-                            <p><a href="http://designmodo.com/startup/?u=787">Startup Framework</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.</p>
-                            <p>You can preview Startup Framework <a href="http://designmodo.com/startup/?u=787">here</a>.</p>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            <!-- Project Details Go Here -->
+                            <h2>Jordan Newberry</h2>
+                            <p class="item-intro text-muted">"This service made buying our first home a stress free experience."</p>
+                            <!-- image
+                            <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
+                            -->
+                            <p>"This service made buying our first home a stress free experience. We needed our financing to be approved within 5 days. By consenting to use this service we were able to get our notice of assessments within the same day allowing our mortgage broker to proceed with the financing process in a timely manner. We are grateful to have been introduced to this service."</p>                            <ul class="list-inline">
+                                <li>Date: October 2015</li>
+                                <li>Client: Jordan Newberry</li>
+                            </ul>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Testimonial</button>
                         </div>
                     </div>
                 </div>
@@ -636,10 +641,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
-                        < class="modal-body">
+                        <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Your Last Three Notice of Assessments!</h2>
-                            <p class="item-intro text-muted">Buy now and receive your NOAs in less than 24 hours.</p>
+                            <h2>Get Your Client's Last Three Notice of Assessments!</h2>
+                            <p class="item-intro text-muted">Buy now and receive your client's NOAs in less than 24 hours.</p>
 
                             <!-- Buy Now Button -->
                             <div data-embed_type="product" data-shop="xapcash.myshopify.com" data-product_name="Notice of Assessment (NOA)" data-product_handle="notice-of-assessment-noa" data-has_image="true" data-display_size="compact" data-redirect_to="checkout" data-buy_button_text="Buy Now" data-button_background_color="fed136" data-button_text_color="ffffff"></div>
