broker branding and testimonial update
reworded content in order to market product to mortgage brokers

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To NOA Today!</div>
-                <div class="intro-heading">Get your NOA Documents With a Few Clicks!</div>
+                <div class="intro-lead-in">Are you a Mortgage Broker?</div>
+                <div class="intro-heading">Get your Client's NOA Documents With a Few Clicks!</div>
                 <a href="#services" class="page-scroll btn btn-xl">Learn More</a>
             </div>
         </div>
@@ -106,8 +106,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Receive your Notice of Assessment documents in 24 hours or less</h2>
-                    <h3 class="section-subheading text-muted"><strong>Are you a Mortgage Broker?</strong> We offer next day delivery of NOA packages that help you close deals faster.</h3>
+                    <h2 class="section-heading">Time Is Money. Close your deals faster!</h2>
+                    <h3 class="section-subheading text-muted">Next-day-delivery of your client's NOA packages will help you close deals faster.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -117,7 +117,7 @@
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Hours, not weeks</h4>
-                    <p class="text-muted">Getting client documents shouldn't be a hassle. We offer convenient email-delivery of NOAs that will arrive within 24 hours for only $44.99.</p>
+                    <p class="text-muted">Getting your client's NOA should be easy! We offer convenient email-delivery of NOAs that will arrive within 24 hours for only $44.99.</p>
                     <a href="#services" class="page-scroll btn btn-primary" style="margin-top: 20px">Start now</a>
                 </div>
                 <div class="col-md-4" style="margin-top: 30px">
@@ -126,7 +126,7 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">NOAs and More!</h4>
-                    <p class="text-muted">Our packages include your client's Notice of Assessment documents, as well as their current Statement of Account docs.</p>
+                    <p class="text-muted">Our packages include your client's Notice of Assessment documents, as well as their current Statement of Account docs!</p>
                     <a href="#services" class="page-scroll btn btn-primary" style="margin-top: 20px">Get More</a>
                 </div>
                 <div class="col-md-4" style="margin-top: 30px">
@@ -135,7 +135,7 @@
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">We use SSL encryption to keep all of your documents encrypted and secure. <strong> Your credit card information is never stored</strong>.</p>
+                    <p class="text-muted">We use SSL encryption and secure payment processing to keep all of your documents safe. Your credit card information is never stored.</p>
                     <a href="#services" class="page-scroll btn btn-primary" style="margin-top: 20px">Proceed Safely</a>
                 </div>
             </div>
@@ -147,14 +147,14 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Get your NOA the easy way!</h2>
-                <h3 class="section-subheading text-muted">Straight to your inbox within hours!</h3>
+                <h2 class="section-heading">Get your client's NOAs the easy way!</h2>
+                <h3 class="section-subheading text-muted">With a few clicks, and a couple of types, we'll have your client's NOAs in your inbox within hours!</h3>
             </div>
         </div>
         <div class="container">
         <div class="row">
             <div class="col-md-12 portfolio-item" style="text-align: center">
-                <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                     <!-- <div class="portfolio-hover"> -->
                         <img src="img/products/Sample-Assessment-791x1024.jpg" height="647" width="500" class="img-responsive" alt="">
                         <!-- stupid plus symbol -->
@@ -643,18 +643,17 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Get Your Client's Last Three Notice of Assessments!</h2>
-                            <p class="item-intro text-muted">Buy now and receive your client's NOAs in less than 24 hours.</p>
-
-                            <!-- Buy Now Button -->
-                            <div data-embed_type="product" data-shop="xapcash.myshopify.com" data-product_name="Notice of Assessment (NOA)" data-product_handle="notice-of-assessment-noa" data-has_image="true" data-display_size="compact" data-redirect_to="checkout" data-buy_button_text="Buy Now" data-button_background_color="fed136" data-button_text_color="ffffff"></div>
-                            <script type="text/javascript">
-                                document.getElementById('ShopifyEmbedScript') || document.write('<script type="text/javascript" src="https://widgets.shopifyapps.com/assets/widgets/embed/client.js" id="ShopifyEmbedScript"><\/script>');
-                            </script>
-                            <div class="container"><noscript><a href="https://xapcash.myshopify.com/cart/7752466245:1" target="_blank">Buy Notice of Assessment (NOA)</a></noscript></div>
-                            <!-- end Buy Now Button -->
-
-                            <div class="col-md-12" style="margin-top: 40px"><button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Go Back</button></div>
+                            <h2>Nathan Robinson</h2>
+                            <p class="item-intro text-muted">"Even one extra day would not have been fast enough to make the dead line. With those documents I was approved for the mortgage and couldn't be happier!""</p>
+                            <!-- image
+                            <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
+                            -->
+                            <p>"My mortgage broker needed my tax documents in time for subject removal on my purchase but I couldn't find them. Luckily he had access to a service where I signed a consent form and he was able to send me what I needed the very next morning. Even one extra day would not have been fast enough to make the dead line. With those documents I was approved for the mortgage and couldn't be happier!"</p>
+                            <ul class="list-inline">
+                                <li>Date: October 2015</li>
+                                <li>Client: Nathan Robinson</li>
+                            </ul>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Testimonial</button>
                         </div>
                     </div>
                 </div>
