added product modal and removed client aside
added product modal and commented out client aside

--- a/index.html
+++ b/index.html
@@ -143,79 +143,35 @@
     </section>
 
     <!-- Products Grid Section -->
-<section id="noa">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Get your client's NOAs the easy way!</h2>
-                <h3 class="section-subheading text-muted">With a few clicks, and a couple of types, we'll have your client's NOAs in your inbox within hours!</h3>
-            </div>
-        </div>
+    <section id="noa">
         <div class="container">
-        <div class="row">
-            <div class="col-md-12 portfolio-item" style="text-align: center">
-                <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                    <!-- <div class="portfolio-hover"> -->
-                        <img src="img/products/Sample-Assessment-791x1024.jpg" height="647" width="500" class="img-responsive" alt="">
-                        <!-- stupid plus symbol -->
-                        <div class="portfolio-hover-content">
-                            <i class="fa fa-plus fa-3x"></i>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Get your client's NOA docs the easy way!</h2>
+                    <h3 class="section-subheading text-muted">With a few clicks, and a couple of types, we'll have your client's NOAs in your inbox within hours!</h3>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <a href="#productModal1" class="portfolio-link" data-toggle="modal">
+                            <!-- <div class="portfolio-hover"> -->
+                            <img src="img/products/Sample-Assessment-791x1024.jpg" style="text-align: center" height="647" width="500" class="img-responsive" alt="">
+                            <!-- stupid plus symbol -->
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                            <!-- </div> -->
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>Notice of Assessment</h4>
+                            <p class="text-muted">Comes with Bonus Statement of Account!</p>
                         </div>
-                    <!-- </div> -->
-                </a>
-                <div class="portfolio-caption">
-                    <h4>Notice of Assessment</h4>
-                    <p class="text-muted">Comes with Bonus Statement of Account!</p>
+                    </div>
                 </div>
             </div>
         </div>
-            <!-- future testimonials
-            <div class="col-md-4 col-sm-6 portfolio-item">
-                <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                    <div class="portfolio-hover">
-                        <div class="portfolio-hover-content">
-                            <i class="fa fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img src="img/portfolio/golden.png" class="img-responsive" alt="">
-                </a>
-                <div class="portfolio-caption">
-                    <h4>Golden</h4>
-                    <p class="text-muted">Website Design</p>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 portfolio-item">
-                <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                    <div class="portfolio-hover">
-                        <div class="portfolio-hover-content">
-                            <i class="fa fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img src="img/portfolio/escape.png" class="img-responsive" alt="">
-                </a>
-                <div class="portfolio-caption">
-                    <h4>Escape</h4>
-                    <p class="text-muted">Website Design</p>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 portfolio-item">
-                <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                    <div class="portfolio-hover">
-                        <div class="portfolio-hover-content">
-                            <i class="fa fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
-                </a>
-                <div class="portfolio-caption">
-                    <h4>Dreams</h4>
-                    <p class="text-muted">Website Design</p>
-                </div>
-            </div>
-            -->
-        </div>
-    </div>
-</section>
+    </section>
 
     <!-- Testimonials Grid Section -->
     <section id="testimonials" class="bg-light-gray">
@@ -465,6 +421,7 @@
     <!-- Clients Aside -->
     <aside class="clients">
         <div class="container">
+            <!--
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
@@ -487,6 +444,7 @@
                     </a>
                 </div>
             </div>
+            -->
         </div>
     </aside>
     
@@ -717,6 +675,33 @@
 
     <!-- Portfolio Modal 6 -->
     <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Project Name</h2>
+                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/dreams-preview.png" alt="">
+                            <p>Dreams is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Dreams is a modern one page web template designed for almost any purpose. It’s a beautiful template that’s designed with the Bootstrap framework in mind.</p>
+                            <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/dreams-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Product Modal 1 -->
+    <div class="portfolio-modal modal fade" id="productModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
