--- a/index.html
+++ b/index.html
@@ -112,31 +112,37 @@
             </div>
             <div class="row text-center">
                 <div class="col-md-4" style="margin-top: 30px">
+                    <a href="#productModal1" data-toggle="modal"
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
+                    </a>
                     <h4 class="service-heading">Hours, not weeks</h4>
                     <p class="text-muted">Getting your client's NOA should be easy! We offer convenient email-delivery of NOAs that will arrive within 24 hours for only $44.99.</p>
-                    <a href="#services" class="page-scroll btn btn-primary" style="margin-top: 20px">Start now</a>
+                    <a href="#productModal1" data-toggle="modal" class="page-scroll btn btn-primary" style="margin-top: 20px">Start now</a>
                 </div>
                 <div class="col-md-4" style="margin-top: 30px">
+                    <a href="#productModal1" data-toggle="modal"
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
+                    </a>
                     <h4 class="service-heading">NOAs and More!</h4>
                     <p class="text-muted">Our packages include your client's Notice of Assessment documents, as well as their current Statement of Account docs!</p>
-                    <a href="#services" class="page-scroll btn btn-primary" style="margin-top: 20px">Get More</a>
+                    <a href="#productModal1" data-toggle="modal" class="page-scroll btn btn-primary" style="margin-top: 20px">Get More</a>
                 </div>
                 <div class="col-md-4" style="margin-top: 30px">
+                    <a href="#productModal1" data-toggle="modal"
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
+                    </a>
                     <h4 class="service-heading">Web Security</h4>
                     <p class="text-muted">We use SSL encryption and secure payment processing to keep all of your documents safe. Your credit card information is never stored.</p>
-                    <a href="#services" class="page-scroll btn btn-primary" style="margin-top: 20px">Proceed Safely</a>
+                    <a href="#productModal1" data-toggle="modal" class="page-scroll btn btn-primary" style="margin-top: 20px">Proceed Safely</a>
                 </div>
             </div>
         </div>
@@ -153,19 +159,21 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 text-center">
+                    <div class="col-lg-6 text-center">
                         <a href="#productModal1" class="portfolio-link" data-toggle="modal">
                             <!-- <div class="portfolio-hover"> -->
-                            <img src="img/products/Sample-Assessment-791x1024.jpg" style="text-align: center" height="647" width="500" class="img-responsive" alt="">
-                            <!-- stupid plus symbol -->
+                            <img src="img/products/Sample-Assessment-791x1024.jpg" height="647" width="500" class="img-responsive" alt=""></a>
+                            <!-- stupid plus symbol
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
-                            <!-- </div> -->
-                        </a>
+                            -->
+                    </div>
+                    <div class="col-lg-6 text-center">
                         <div class="portfolio-caption">
                             <h4>Notice of Assessment</h4>
                             <p class="text-muted">Comes with Bonus Statement of Account!</p>
+                            <a href="#productModal1" data-toggle="modal" class="page-scroll btn btn-xl">Order Now</a>
                         </div>
                     </div>
                 </div>
