--- a/index.html
+++ b/index.html
@@ -148,8 +148,9 @@
         </div>
     </section>
 
-    <!-- Products Grid Section -->
+    <!-- Product Section -->
     <section id="noa">
+        <!-- Title Blurb -->
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -157,25 +158,25 @@
                     <h3 class="section-subheading text-muted">With a few clicks, and a couple of types, we'll have your client's NOAs in your inbox within hours!</h3>
                 </div>
             </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 text-center">
-                        <a href="#productModal1" class="portfolio-link" data-toggle="modal">
-                            <!-- <div class="portfolio-hover"> -->
-                            <img src="img/products/Sample-Assessment-791x1024.jpg" height="647" width="500" class="img-responsive" alt=""></a>
-                            <!-- stupid plus symbol
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                            -->
-                    </div>
-                    <div class="col-lg-6 text-center">
-                        <div class="portfolio-caption">
-                            <h4>Notice of Assessment</h4>
-                            <p class="text-muted">Comes with Bonus Statement of Account!</p>
-                            <a href="#productModal1" data-toggle="modal" class="page-scroll btn btn-xl">Order Now</a>
-                        </div>
-                    </div>
+        </div>
+        <!-- Sample NOA -->
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <a href="#productModal1" class="portfolio-link" data-toggle="modal">
+                    <!--<div class="portfolio-hover"> -->
+                        <img src="img/products/Sample-Assessment-791x1024.jpg" height="647" width="500" style="padding-top: 20px">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!-- Sample NOA Call to Action -->
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading" style="padding-top: 50px">Order now for only $49.99</h2>
+                    <h3 class="section-subheading text-muted">Get your client's NOA docs in less than 24 hours!</h3>
+                    <a href="#productModal1" class="page-scroll btn btn-xl" data-toggle="modal" style="text-align: center">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -190,6 +191,7 @@
                     <h3 class="section-subheading text-muted">Hear what others have to say about NOA today!</h3>
                 </div>
             </div>
+            <!-- Latieshia Falez -->
             <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
@@ -205,6 +207,7 @@
                         <p class="text-muted">Nanaimo, BC</p>
                     </div>
                 </div>
+                <!-- Jordan Newberry -->
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -219,6 +222,7 @@
                         <p class="text-muted">Toronto, ON</p>
                     </div>
                 </div>
+                <!-- Nathan Robinson -->
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -235,15 +239,17 @@
                 </div>
             </div>
         </div>
+
+        <!-- Testimonial Call to Action -->
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading" style="padding-top: 50px">Order now for only $49.99</h2>
                 <h3 class="section-subheading text-muted">Get your client's NOA docs in less than 24 hours!</h3>
-                <a href="#productModal1" class="page-scroll btn btn-xl" style="text-align: center">Buy Now</a>
+                <a href="#productModal1" class="page-scroll btn btn-xl" data-toggle="modal" style="text-align: center">Buy Now</a>
             </div>
         </div>
     </section>
-    -->
+
     <!-- About Section -->
     <section id="about">
         <div class="container">
