integrated shopify buy now button
added shopify buy now button and product details.

--- a/index.html
+++ b/index.html
@@ -691,15 +691,20 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/dreams-preview.png" alt="">
-                            <p>Dreams is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Dreams is a modern one page web template designed for almost any purpose. It’s a beautiful template that’s designed with the Bootstrap framework in mind.</p>
-                            <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/dreams-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            <h2>Three Years of NOA Documents</h2>
+                            <h3>Only $49.99!</h3>
+                            <div data-embed_type="product" data-shop="xapcash.myshopify.com" data-product_name="Notice of Assessment (NOA)" data-product_handle="notice-of-assessment-noa" data-has_image="true" data-display_size="compact" data-redirect_to="product" data-buy_button_text="Buy Now" data-button_background_color="fed136" data-button_text_color="ffffff"></div>
+                            <script type="text/javascript">
+                                document.getElementById('ShopifyEmbedScript') || document.write('<script type="text/javascript" src="https://widgets.shopifyapps.com/assets/widgets/embed/client.js" id="ShopifyEmbedScript"><\/script>');
+                            </script>
+                            <noscript><a href="https://xapcash.myshopify.com/cart/7752466245:1" target="_blank">Buy Notice of Assessment (NOA)</a></noscript>
                         </div>
                     </div>
                 </div>
+            </div>
+            <!-- Button -->
+            <div class="container" style="padding-top: 25px">
+                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Go Back</button>
             </div>
         </div>
     </div>
