added resized images
added resized images for testimonials.

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/testimonials/Nanaimo.jpg" class="img-responsive" alt="">
+                        <img src="img/testimonials/nanaimo.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Latieshia Falez</h4>
@@ -498,8 +498,8 @@
         </div>
     </footer>
 
-    <!-- Portfolio Modals -->
-    <!-- Use the modals below to showcase details about your portfolio projects! -->
+    <!-- Testimonial Modals -->
+    <!-- Use the modals below to showcase your testimonials! -->
 
     <!-- Portfolio Modal 1 -->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
@@ -692,7 +692,7 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Three Years of NOA Documents</h2>
-                            <h3>Only $49.99!</h3>
+                            <h3>For Only $49.99!</h3>
                             <div data-embed_type="product" data-shop="xapcash.myshopify.com" data-product_name="Notice of Assessment (NOA)" data-product_handle="notice-of-assessment-noa" data-has_image="true" data-display_size="compact" data-redirect_to="product" data-buy_button_text="Buy Now" data-button_background_color="fed136" data-button_text_color="ffffff"></div>
                             <script type="text/javascript">
                                 document.getElementById('ShopifyEmbedScript') || document.write('<script type="text/javascript" src="https://widgets.shopifyapps.com/assets/widgets/embed/client.js" id="ShopifyEmbedScript"><\/script>');
