--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
                     <h2 class="section-heading">Testimonials</h2>
                     <h3 class="section-subheading text-muted">Hear what others have to say about NOA today!</h3>
                 </div>
+                <!-- Git is coo -->
             </div>
             <!-- Latieshia Falez -->
             <div class="row">
